# swapi_async

./: README.md  connection.py  main.py  model.py  pyproject.toml  schema.py
